link changed to nextlink

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -5,6 +5,12 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  /* position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+
+  text-align: center; */
 }
 
 .icons {
