--- a/styles/specificProducts.module.css
+++ b/styles/specificProducts.module.css
@@ -9,6 +9,60 @@
 }
 .specificProduct__image {
   width: 30%;
+  min-width: 200px;
+}
+
+.title {
+  margin-top: 1rem;
+  padding: 20px;
+  font-weight: 220;
+  font-size: 30px;
+  max-width: 300px;
+}
+
+.description {
+  padding: 0px;
+  font-size: 18px;
+  font-weight: 150;
+  max-width: 250px;
+}
+
+.price {
+  padding: 25px;
+  font-weight: 150;
+}
+
+.cartBtn {
+  margin-top: 5px;
+  margin-bottom: 5rem;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px 15px;
+  border-radius: 20px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  font-size: 16px;
+}
+
+.cartBtn:hover {
+  background-color: black;
+  color: white;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  transform: translateY(-5px);
+}
+
+/* .container {
+  margin: 0 auto;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  text-justify: inter-word;
+}
+.specificProduct__image {
+  width: 30%;
   min-width: 300px;
 }
 
@@ -21,13 +75,13 @@
 .description {
   padding: 0px;
   font-size: 18px;
-  font-weight: 350;
+  font-weight: 250;
   max-width: 400px;
 }
 
 .price {
   padding: 30px;
-  font-weight: 350;
+  font-weight: 150;
 }
 
 .cartBtn {
@@ -38,6 +92,7 @@
   border-radius: 20px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
+  font-size: 16px;
 }
 
 .cartBtn:hover {
@@ -46,4 +101,4 @@
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
   color: #fff;
   transform: translateY(-5px);
-}
+} */
